<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Alerts</string>
    <string name="action_settings">Settings</string>
    <string name="msg_alert_received">New alert received</string>
    <string name="msg_location_service_unaivalable">Location service unaivalable.\nTry again later.</string>
    <string name="msg_alerts_service_unaivalable">Alerts service unaivalable.\nTry again later.</string>
    <string name="msg_statistics_service_unaivalable">Statistics unaivalable.\nTry again later.</string>
    <string name="msg_crisis_saved">Crisis notification saved.</string>
    <string name="open">Open</string>
    <string name="msg_crisis_being_saved">Crisis notification sent.\nPlease wait.</string>
    <string name="title_activity_capture_image">Capture Image</string>
    <string name="crises_report">Crises Report</string>
    <string name="describe_the_crisis">Describe the Crisis</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>
    <string name="image">Image</string>
    <string name="click_the_below_button_to_take_photo">Click the below button to take photo</string>
    <string name="take_photo">Take Photo</string>
    <string name="alerts_and_crises">Alerts and Crises</string>
    <string name="report">Report</string>
    <string name="browse">Browse</string>
    <string name="status">Status</string>
    <string name="title_alerta_list">Alertas</string>
    <string name="title_alerta_detail">Alerta Detail</string>
</resources>
