<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.ita.bditac.mobile.alertas.MainActivity">

    <LinearLayout
        android:layout_width ="match_parent"
        android:layout_height ="wrap_content"
        android:orientation ="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width ="wrap_content"
            android:layout_height ="wrap_content"
            android:text ="@string/alerts_and_crises" />

        <Button
            android:layout_width ="match_parent"
            android:layout_height ="wrap_content"
            android:text ="@string/report"
            android:onClick="startCadastrarCrise"
            />

        <Button
            android:layout_width ="match_parent"
            android:layout_height ="wrap_content"
            android:text ="@string/browse"
            android:onClick="startConsultarCrise"
            />

        <Button
            android:layout_width ="match_parent"
            android:layout_height ="wrap_content"
            android:text ="@string/status"
            android:onClick="startConsultarIndicador"
            />

    </LinearLayout>

</ScrollView>
