<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastrarCriseActivity">

    <LinearLayout
        android:layout_width ="match_parent"
        android:layout_height ="wrap_content"
        android:orientation ="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width ="wrap_content"
            android:layout_height ="wrap_content"
            android:text ="@string/crises_report"/>

        <Spinner
            android:id ="@+id/categoria"
            android:layout_width ="match_parent"
            android:layout_height ="wrap_content"
            android:layout_marginBottom ="16dp"/>

        <EditText
            android:id ="@+id/mensagem"
            android:layout_width ="match_parent"
            android:layout_height ="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint ="@string/describe_the_crisis"
            android:inputType ="textMultiLine"
            android:lines="10"
            android:minLines="5"
            android:maxLines="20"
            android:scrollbars="vertical"/>

        <TextView
            android:layout_width="349dp"
            android:layout_height="wrap_content"
            android:text="@string/click_the_below_button_to_take_photo"
            android:textAlignment="center"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take_photo"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:onClick="Capture_Click"/>

        <ImageView
            android:id="@+id/camera_image"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"/>

        <Button
            android:layout_width ="match_parent"
            android:layout_height ="wrap_content"
            android:text ="@string/save"
            android:onClick="Salvar_Click"/>

        <Button
            android:layout_width ="match_parent"
            android:layout_height ="wrap_content"
            android:text ="@string/clear"
            android:onClick="Limpar_Click"/>

    </LinearLayout>

</ScrollView>
